// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MarketplaceListingCard - Snapshots > matches the auction listing snapshot rendered from an index entry 1`] = `
<a
  aria-label="View 35mm rangefinder camera"
  class="group block rounded-xl outline-none focus-visible:ring-2 focus-visible:ring-ring"
  href="/marketplace/listing/yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy/rangefinder_camera"
>
  <div
    class="flex flex-col rounded-xl bg-card text-card-foreground shadow-sm h-full gap-0 overflow-hidden border border-border/60 py-0 transition-all group-hover:-translate-y-0.5 group-hover:border-brand/40 group-hover:shadow-lg"
    data-slot="card"
    data-testid="card"
  >
    <div
      class="relative flex aspect-[4/5] items-center justify-center overflow-hidden bg-linear-to-br from-emerald-500/40 via-teal-500/20 to-background"
    >
      <div
        class="absolute inset-0 bg-[radial-gradient(circle_at_70%_20%,rgba(255,255,255,0.16),transparent_32%)]"
      />
      <svg
        aria-hidden="true"
        class="lucide lucide-camera size-20 text-foreground/75 drop-shadow-xl transition-transform group-hover:scale-105"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M13.997 4a2 2 0 0 1 1.76 1.05l.486.9A2 2 0 0 0 18.003 7H20a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V9a2 2 0 0 1 2-2h1.997a2 2 0 0 0 1.759-1.048l.489-.904A2 2 0 0 1 10.004 4z"
        />
        <circle
          cx="12"
          cy="13"
          r="3"
        />
      </svg>
      <img
        alt="35mm rangefinder camera"
        class="h-auto max-w-full absolute inset-0 object-cover"
        data-nimg="fill"
        decoding="async"
        loading="lazy"
        src="http://localhost:6286/pub/pubky.app/marketplace/v1/media/image_01?pubky-host=yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy"
        style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
      />
      <div
        class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent [a&]:hover:bg-primary/90 absolute top-3 left-3 bg-background/85 text-foreground shadow-sm backdrop-blur-md"
        data-slot="badge"
      >
        Auction
      </div>
      <button
        aria-label="Add to watchlist"
        aria-pressed="false"
        class="absolute top-2.5 right-2.5 z-10 flex size-8 items-center justify-center rounded-full bg-background/85 text-foreground shadow-sm backdrop-blur-md transition-colors hover:text-brand focus-visible:ring-2 focus-visible:ring-ring focus-visible:outline-none"
        data-cy="marketplace-card-watch-toggle"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-bell size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.268 21a2 2 0 0 0 3.464 0"
          />
          <path
            d="M3.262 15.326A1 1 0 0 0 4 17h16a1 1 0 0 0 .74-1.673C19.41 13.956 18 12.499 18 8A6 6 0 0 0 6 8c0 4.499-1.411 5.956-2.738 7.326"
          />
        </svg>
      </button>
      <div
        class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent text-secondary-foreground [a&]:hover:bg-secondary/90 absolute right-3 bottom-3 bg-background/85 backdrop-blur-md"
        data-slot="badge"
        data-variant="secondary"
      >
        Ends 
        Aug 29
      </div>
    </div>
    <div
      class="flex flex-1 flex-col gap-2 p-4"
      data-slot="card-content"
    >
      <div
        class="flex items-start justify-between gap-3"
      >
        <h2
          class="line-clamp-2 text-base leading-5 font-semibold text-foreground"
          data-testid="typography"
        >
          35mm rangefinder camera
        </h2>
        <div
          class="flex shrink-0 flex-col items-end"
        >
          <span
            class="text-[10px] font-medium tracking-wide text-muted-foreground uppercase"
            data-testid="typography"
          >
            Starting bid
          </span>
          <p
            class="text-base font-bold text-brand"
            data-testid="typography"
          >
            $45.00
          </p>
          <span
            class="font-medium text-xs text-muted-foreground"
            data-testid="typography"
          >
            Buy now 
            $125.00
          </span>
        </div>
      </div>
      <p
        class="font-medium truncate text-sm text-muted-foreground"
        data-testid="typography"
      >
        Proof of Film
      </p>
      <div
        class="mt-auto flex items-center justify-between gap-2 pt-1"
      >
        <span
          class="font-medium text-xs text-muted-foreground"
          data-testid="typography"
        >
          Excellent
        </span>
        <span
          class="font-medium text-xs text-muted-foreground"
          data-testid="typography"
        >
          NY, 
          US
        </span>
      </div>
    </div>
  </div>
</a>
`;

exports[`MarketplaceListingCard - Snapshots > matches the fixed-price listing snapshot 1`] = `
<a
  aria-label="View Vintage leather boots"
  class="group block rounded-xl outline-none focus-visible:ring-2 focus-visible:ring-ring"
  href="/marketplace/listing/yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy/leather_boots"
>
  <div
    class="flex flex-col rounded-xl bg-card text-card-foreground shadow-sm h-full gap-0 overflow-hidden border border-border/60 py-0 transition-all group-hover:-translate-y-0.5 group-hover:border-brand/40 group-hover:shadow-lg"
    data-slot="card"
    data-testid="card"
  >
    <div
      class="relative flex aspect-[4/5] items-center justify-center overflow-hidden bg-linear-to-br from-cyan-500/40 via-blue-500/20 to-background"
    >
      <div
        class="absolute inset-0 bg-[radial-gradient(circle_at_70%_20%,rgba(255,255,255,0.16),transparent_32%)]"
      />
      <svg
        aria-hidden="true"
        class="lucide lucide-footprints size-20 text-foreground/75 drop-shadow-xl transition-transform group-hover:scale-105"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 16v-2.38C4 11.5 2.97 10.5 3 8c.03-2.72 1.49-6 4.5-6C9.37 2 10 3.8 10 5.5c0 3.11-2 5.66-2 8.68V16a2 2 0 1 1-4 0Z"
        />
        <path
          d="M20 20v-2.38c0-2.12 1.03-3.12 1-5.62-.03-2.72-1.49-6-4.5-6C14.63 6 14 7.8 14 9.5c0 3.11 2 5.66 2 8.68V20a2 2 0 1 0 4 0Z"
        />
        <path
          d="M16 17h4"
        />
        <path
          d="M4 13h4"
        />
      </svg>
      <img
        alt="Vintage leather boots"
        class="h-auto max-w-full absolute inset-0 object-cover"
        data-nimg="fill"
        decoding="async"
        loading="lazy"
        src="http://localhost:6286/pub/pubky.app/marketplace/v1/media/leather_boots_image?pubky-host=yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy"
        style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
      />
      <div
        class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent [a&]:hover:bg-primary/90 absolute top-3 left-3 bg-background/85 text-foreground shadow-sm backdrop-blur-md"
        data-slot="badge"
      >
        Buy now
      </div>
      <button
        aria-label="Add to watchlist"
        aria-pressed="false"
        class="absolute top-2.5 right-2.5 z-10 flex size-8 items-center justify-center rounded-full bg-background/85 text-foreground shadow-sm backdrop-blur-md transition-colors hover:text-brand focus-visible:ring-2 focus-visible:ring-ring focus-visible:outline-none"
        data-cy="marketplace-card-watch-toggle"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-heart size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex flex-1 flex-col gap-2 p-4"
      data-slot="card-content"
    >
      <div
        class="flex items-start justify-between gap-3"
      >
        <h2
          class="line-clamp-2 text-base leading-5 font-semibold text-foreground"
          data-testid="typography"
        >
          Vintage leather boots
        </h2>
        <div
          class="flex shrink-0 flex-col items-end"
        >
          <p
            class="text-base font-bold text-brand"
            data-testid="typography"
          >
            $125.00
          </p>
        </div>
      </div>
      <p
        class="font-medium truncate text-sm text-muted-foreground"
        data-testid="typography"
      >
        Satoshi Vintage
      </p>
      <div
        class="mt-auto flex items-center justify-between gap-2 pt-1"
      >
        <span
          class="font-medium text-xs text-muted-foreground"
          data-testid="typography"
        >
          Good
        </span>
        <span
          class="font-medium text-xs text-muted-foreground"
          data-testid="typography"
        >
          US
        </span>
      </div>
    </div>
  </div>
</a>
`;
